--- a/events.html
+++ b/events.html
@@ -106,7 +106,7 @@
         </div>
         </div>
        
-        <button class="btn btn-imp mt-4">LEARN MORE</button>
+        <button href="./event1.html" class="btn btn-imp mt-4">LEARN MORE</button>
 
       </div>
     </div>
@@ -135,7 +135,7 @@
                           <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                           <h5>Title description, May 7, 2023</h5>
                           <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                          <a href="#">Read More</a>
+                          <a href="./event2.html">Read More</a>
                       </div>
                       <div class="col-sm-6 text-right">
                           <img class="" src="../movimentgrafitti-redesign/assets/images/news/fireworks-ge40eac415_1920.jpg" alt="" width="500px">
@@ -152,7 +152,7 @@
                         <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                         <h5>Title description, May 7, 2023</h5>
                         <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                        <a href="#">Read More</a>
+                        <a href="./event3.html">Read More</a>
                     </div>
                     <div class="col-sm-6 text-right">
                         <img class="" src="../movimentgrafitti-redesign/assets/images/news/headway-F2KRf_QfCqw-unsplash.jpg" alt="" width="500px">
@@ -171,7 +171,7 @@
                           <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                           <h5>Title description, May 7, 2023</h5>
                           <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                          <a href="#">Read More</a>
+                          <a href="./event4.html">Read More</a>
                       </div>
                       <div class="col-sm-6 text-right">
                           <img class="" src="../movimentgrafitti-redesign/assets/images/news/kane-reinholdtsen-LETdkk7wHQk-unsplash.jpg" alt="" width="500px">
@@ -188,7 +188,7 @@
                         <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                         <h5>Title description, May 7, 2023</h5>
                         <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                        <a href="#">Read More</a>
+                        <a href="./event5.html">Read More</a>
                     </div>
                     <div class="col-sm-6 text-right">
                         <img class="" src="../movimentgrafitti-redesign/assets/images/news/lora-ohanessian-16rIhtV42yA-unsplash.jpg" alt="" width="500px">
