--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
         <h1>Current news subtitle.</h1>
         <div class="line-left"></div></div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id molestiae, eum delectus officiis fugit maxime sapiente assumenda asperiores! Aliquid quasi, vitae minima veritatis nemo ex repudiandae sapiente? Neque ipsa voluptatum saepe odit?</p>
-        <button class="btn btn-imp mt-4">READ MORE</button>
+        <a href="./news1.html" class="btn btn-imp mt-4">READ MORE</a>
 
       </div>
     </div>
@@ -108,7 +108,7 @@
                         <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                         <h5>Title description, May 7, 2023</h5>
                         <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                        <a href="../movimentgrafitti-redesign/news1.html">Read More</a>
+                        <a href="../movimentgrafitti-redesign/news2.html">Read More</a>
                     </div>
                     <div class="col-sm-6 text-right">
                         <img class="" src="../movimentgrafitti-redesign/assets/images/news/fireworks-ge40eac415_1920.jpg" alt="" width="500px">
@@ -125,7 +125,7 @@
                       <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                       <h5>Title description, May 7, 2023</h5>
                       <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                      <a href="../movimentgrafitti-redesign/news2.html">Read More</a>
+                      <a href="../movimentgrafitti-redesign/news3.html">Read More</a>
                   </div>
                   <div class="col-sm-6 text-right">
                       <img class="" src="../movimentgrafitti-redesign/assets/images/news/headway-F2KRf_QfCqw-unsplash.jpg" alt="" width="500px">
@@ -144,7 +144,7 @@
                         <h2 class="card-title">Lorem ipsum dolor sit amet.</h2>
                         <h5>Title description, May 7, 2023</h5>
                         <p class="card-text text-truncate">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sequi impedit expedita nobis numquam.</p>
-                        <a href="../movimentgrafitti-redesign/news3.html">Read More</a>
+                        <a href="../movimentgrafitti-redesign/news4.html">Read More</a>
                     </div>
                     <div class="col-sm-6 text-right">
                         <img class="" src="../movimentgrafitti-redesign/assets/images/news/kane-reinholdtsen-LETdkk7wHQk-unsplash.jpg" alt="" width="500px">
