--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         </div>
         <div class="align-items-center justify-content-center">
-          <a href="./ourmission.html"> <button class="btn btn-dark mt-3 mb-4">Learn More</button></a>
+          <a href="./ourmission.html"><button class="btn btn-dark mt-3 mb-4">Learn More</button></a>
         </div>
         </div>  
         
@@ -205,7 +205,7 @@
               <input type="text" class="form-control" placeholder="Enter subject">
             </div>
             <div class="form-group col-lg-12">
-              <textarea name="message" id="" cols="" rows="5" class="form-control" placeholder="Enter message"></textarea>
+              <textarea name="message" rows="5" class="form-control" placeholder="Enter message"></textarea>
             </div>
             <div class="form-group col-lg-12 d-grid">
              <button class="btn btn-imp">Send Message</button>
@@ -231,7 +231,7 @@
           <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner" data-aos="fade-right" data-aos-delay="150">
       <div class="carousel-item active">
-        <img src="./assets/images/events/Slide 16_9 - 1.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/images/events/Slide16_9-1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption justify-content-between align-items-center text-center">
           <h3 class="text-white text-uppercase" style="font-size: 40px;">First slide label</h3>
           <h6 class="text-white">Some representative placeholder content for the first slide.</h6>
@@ -239,7 +239,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/images/events/Slide 16_9 - 2.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/images/events/Slide16_9-2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption justify-content-between align-items-center text-center">
           <h3 class="text-white text-uppercase" style="font-size: 40px;">First slide label</h3>
           <h6 class="text-white">Some representative placeholder content for the first slide.</h6>
@@ -247,7 +247,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/images/events/Slide 16_9 - 3.jpg" class="d-block w-100" alt="...">
+        <img src="./assets/images/events/Slide16_9-3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption justify-content-between align-items-center text-center">
           <h3 class="text-white text-uppercase" style="font-size: 40px;">First slide label</h3>
           <h6 class="text-white">Some representative placeholder content for the first slide.</h6>
@@ -297,7 +297,7 @@
               <p>Great ipsum dolor, sit amet consectetur adipisicing elit. Facere in libero culpa! Sint, fugit assumenda?</p>
             </div>
             <div class="review-person mt-4 d-flex align-items-center">
-              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame 2.jpg" alt="">
+              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame2.jpg" alt="">
               <div class="ms-3">
                 <h5>Angela Ngozi</h5>
                 <small>Donor & founder of ABC</small>
@@ -318,7 +318,7 @@
               <p>Great ipsum dolor, sit amet consectetur adipisicing elit. Facere in libero culpa! Sint, fugit assumenda?</p>
             </div>
             <div class="review-person mt-4 d-flex align-items-center">
-              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame 1.jpg" alt="">
+              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame1.jpg" alt="">
               <div class="ms-3">
                 <h5>Tempie Brennan</h5>
                 <small>Volunteer</small>
@@ -339,7 +339,7 @@
               <p>Great ipsum dolor, sit amet consectetur adipisicing elit. Facere in libero culpa! Sint, fugit assumenda?</p>
             </div>
             <div class="review-person mt-4 d-flex align-items-center">
-              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame 6.jpg" alt="">
+              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame6.jpg" alt="">
               <div class="ms-3">
                 <h5>Jack Booth</h5>
                 <small>Supporter</small>
@@ -360,7 +360,7 @@
               <p>Great ipsum dolor, sit amet consectetur adipisicing elit. Facere in libero culpa! Sint, fugit assumenda?</p>
             </div>
             <div class="review-person mt-4 d-flex align-items-center">
-              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame 4.jpg" alt="">
+              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame4.jpg" alt="">
               <div class="ms-3">
                 <h5>Yi Chan</h5>
                 <small>Consultant</small>
@@ -381,7 +381,7 @@
               <p>Great ipsum dolor, sit amet consectetur adipisicing elit. Facere in libero culpa! Sint, fugit assumenda?</p>
             </div>
             <div class="review-person mt-4 d-flex align-items-center">
-              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame 3.jpg" alt="">
+              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame3.jpg" alt="">
               <div class="ms-3">
                 <h5>Jack Jones</h5>
                 <small>Supporter</small>
@@ -402,7 +402,7 @@
               <p>Great ipsum dolor, sit amet consectetur adipisicing elit. Facere in libero culpa! Sint, fugit assumenda?</p>
             </div>
             <div class="review-person mt-4 d-flex align-items-center">
-              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame 5.jpg" alt="">
+              <img class="rounded-circle" style="width: 100px; height: 100px;" src="./assets/images/Frame5.jpg" alt="">
               <div class="ms-3">
                 <h5>Mae Bucket</h5>
                 <small>Supporter</small>
@@ -426,7 +426,8 @@
       <div class="col-lg-4 align-items-center" data-aos="fade-up" data-aos-delay="150">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae ipsa pariatur quasi harum at eligendi odio, nesciunt dignissimos praesentium voluptatem provident aliquid tenetur sequi mollitia eveniet qui, quis numquam id ex corrupti. Quasi, distinctio. Minus asperiores officiis nesciunt similique laboriosam!</p>
         <a href="../movimentgrafitti-redesign/joinus.html">
-        <button class="btn btn-imp">Join us</button></a>
+        <button class="btn btn-imp">Join us</button>
+        </a>
       </div>
 
     </div>
