--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Moviment Graffitti</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -16,6 +16,7 @@
     <div class="container">
       <a class="navbar-brand img" href="../movimentgrafitti-redesign/index.html">
         <img src="./assets/images/logo.png">
+
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -119,7 +120,9 @@
         </div>
         </div>
         <div class="align-items-center justify-content-center">
-          <a href="./ourmission.html"><button class="btn btn-dark mt-3 mb-4">Learn More</button></a>
+          <a href="./ourmission.html">
+            <button class="btn btn-dark mt-3 mb-4">Learn More</button>
+          </a>
         </div>
         </div>  
         
